--- a/custom_components/openrgb/manifest.json
+++ b/custom_components/openrgb/manifest.json
@@ -1,11 +1,11 @@
 {
     "domain": "openrgb",
     "name": "OpenRGB",
-    "version": "2.3",
+    "version": "2.4",
     "config_flow": true,
-    "documentation": "https://github.com/koying/openrgb_ha",
-    "issue_tracker": "https://github.com/koying/openrgb_ha/issues",
-    "requirements": ["openrgb-python==0.2.10"],
-    "codeowners": ["@bahorn", "@koying"],
+    "documentation": "https://github.com/venglov/openrgb_ha",
+    "issue_tracker": "https://github.com/venglov/openrgb_ha/issues",
+    "requirements": ["openrgb-python==0.3.2"],
+    "codeowners": ["@bahorn", "@koying", "venglov"],
     "iot_class": "local_polling"
 }
